Salesforce_SeerBIt_PlugIn/force-app/main/default/objects/Profile__c/fields/Address2__c.field-meta.xml
<CustomField>
    <fullName>Address2__c</fullName>
    <label>Address2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>