Salesforce_SeerBIt_PlugIn/force-app/main/default/objects/Profile__c/fields/BankAccountNo__c.field-meta.xml
<CustomField>
    <fullName>BankAccountNo__c</fullName>
    <label>BankAccountNo.</label>
    <length>100</length>
    <type>Text</type>
</CustomField>