Salesforce_SeerBIt_PlugIn/force-app/main/default/objects/Profile__c/fields/BankAccountPosting__c.field-meta.xml
<CustomField>
    <fullName>BankAccountPosting__c</fullName>
    <label>BankAccountPosting</label>
    <length>100</length>
    <type>Text</type>
</CustomField>