Salesforce_SeerBIt_PlugIn/force-app/main/default/objects/Profile__c/fields/BankBranchNo__c.field-meta.xml
<CustomField>
    <fullName>BankBranchNo__c</fullName>
    <label>BankBranchNo.</label>
    <length>100</length>
    <type>Text</type>
</CustomField>