Salesforce_SeerBIt_PlugIn/force-app/main/default/objects/Profile__c/fields/BusinessEmail__c.field-meta.xml
<CustomField>
    <fullName>BusinessEmail__c</fullName>
    <label>BusinessEmail</label>
    <type>Email</type>
</CustomField>