Salesforce_SeerBIt_PlugIn/force-app/main/default/objects/Profile__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country/Region Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NG</fullName>
                <default>true</default>
                <label>NG</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>