Salesforce_SeerBIt_PlugIn/force-app/main/default/objects/Profile__c/fields/GirNo__c.field-meta.xml
<CustomField>
    <fullName>GirNo__c</fullName>
    <label>GirNo.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>