Salesforce_SeerBIt_PlugIn/force-app/main/default/objects/Profile__c/fields/GLN__c.field-meta.xml
<CustomField>
    <fullName>GLN__c</fullName>
    <label>GLN</label>
    <length>100</length>
    <type>Text</type>
</CustomField>