Salesforce_SeerBIt_PlugIn/force-app/main/default/objects/Profile__c/fields/HomePage__c.field-meta.xml
<CustomField>
    <fullName>HomePage__c</fullName>
    <label>HomePage</label>
    <length>100</length>
    <type>Text</type>
</CustomField>