Salesforce_SeerBIt_PlugIn/force-app/main/default/objects/Profile__c/fields/PaymentRoutingNo__c.field-meta.xml
<CustomField>
    <fullName>PaymentRoutingNo__c</fullName>
    <label>PaymentRoutingNo.</label>
    <length>100</length>
    <type>Text</type>
</CustomField>