Salesforce_SeerBIt_PlugIn/force-app/main/default/objects/Profile__c/fields/PhoneNo__c.field-meta.xml
<CustomField>
    <fullName>PhoneNo__c</fullName>
    <label>PhoneNo.</label>
    <type>Phone</type>
</CustomField>