Salesforce_SeerBIt_PlugIn/force-app/main/default/objects/Profile__c/fields/Prefix__c.field-meta.xml
<CustomField>
    <fullName>Prefix__c</fullName>
    <label>Prefix</label>
    <length>50</length>
    <type>Text</type>
</CustomField>