Salesforce_SeerBIt_PlugIn/force-app/main/default/objects/Profile__c/fields/Secret_Key__c.field-meta.xml
<CustomField>
    <fullName>Secret_Key__c</fullName>
    <label>Secret key</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>