Salesforce_SeerBIt_PlugIn/force-app/main/default/objects/Profile__c/fields/SWIFTCode__c.field-meta.xml
<CustomField>
    <fullName>SWIFTCode__c</fullName>
    <label>SWIFTCode</label>
    <length>100</length>
    <type>Text</type>
</CustomField>