Salesforce_SeerBIt_PlugIn/force-app/main/default/objects/Profile__c/fields/VAT_RegistratrionNo__c.field-meta.xml
<CustomField>
    <fullName>VAT_RegistratrionNo__c</fullName>
    <label>VAT RegistratrionNo.</label>
    <length>100</length>
    <type>Text</type>
</CustomField>