Salesforce_SeerBIt_PlugIn/force-app/main/default/objects/Profile__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Secret_Key__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>